# dlmanage

./: README.md  README.rst  logtest.sh  pyproject.toml
dlmanage/: __main__.py  dlmanage.py  main.py  models.py  slurmbridge.py
dlmanage/slurmbridge/: __init__.py  cliobject.py  objects.py  sacctmgr.py  scancel.py  scontrol.py
dlmanage/widgets/: __init__.py  footer.py  interactive_table.py  log_view.py  scroll_view.py
manage_cluster/: __main__.py  main.py  models.py  slurmbridge.py
manage_cluster/widgets/: __init__.py  footer.py  interactive_table.py
slurmbridge/: __init__.py  common.py  objects.py  sacctmgr.py
tests/: test_dlmanage.py  test_manage_cluster.py
