[tool.poetry]
name = "manage-cluster"
version = "0.1.0"
description = ""
authors = ["Griesshaber Daniel <griesshaber@hdm-stuttgart.de>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.15"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
