[tool.poetry]
name = "dlmanage"
version = "0.1.0"
description = ""
authors = ["Griesshaber Daniel <griesshaber@hdm-stuttgart.de>"]

[tool.poetry.scripts]
dlmanage = "dlmanage.main:main"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.1.15"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true
